fix alignment

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -25,7 +25,7 @@
 .career-item__date-inner {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .career-item__date-inner > span {
